fix z-index  https://github.com/owncloud/core/commit/4edf388a3852507886e1fc1c396725ea0a6c8e82
https://github.com/owncloud/core/commit/4edf388a3852507886e1fc1c396725ea0a6c8e82

--- a/core/css/share.css
+++ b/core/css/share.css
@@ -161,7 +161,7 @@ a.showCruds:hover,a.unshare:hover {
 	max-height:103px;
 	overflow-y:auto;
 	overflow-x:hidden;
-	z-index: 101 !important;
+	z-index: 501 !important;
 }
 
 .notCreatable {
